add amazon web3

--- a/json/allTasks.json
+++ b/json/allTasks.json
@@ -76,5 +76,44 @@
       "websit": "https://celadon-chebakia-896521.netlify.app/"
     },
     "done": true
+  },
+  {
+    "id": 7,
+    "title": "token sale DApp",
+    "OriginalProjects": {
+      "sourceCode": "https://github.com/dappuniversity/token_sale",
+      "tutorial": "https://www.youtube.com/watch?v=XdKv5uwEk5A&t=218s"
+    },
+    "myResults": {
+      "sourceGithub": "https://github.com/Hamza-Zahir/7_Cryptocurrency",
+      "websit": "https://sensational-mermaid-3ae6a2.netlify.app/"
+    },
+    "done": true
+  },
+  {
+    "id": 8,
+    "title": "Full Web3 Mint Website",
+    "OriginalProjects": {
+      "sourceCode": "",
+      "tutorial": "https://www.youtube.com/watch?v=ynFNLBP2TPs&t=1077s"
+    },
+    "myResults": {
+      "sourceGithub": "https://github.com/Hamza-Zahir/8_mint_website",
+      "websit": "https://polite-bublanina-0aeee6.netlify.app/"
+    },
+    "done": true
+  },
+  {
+    "id": 9,
+    "title": "Amazon web3",
+    "OriginalProjects": {
+      "sourceCode": "https://github.com/IAmJaysWay/amazon-clone-full",
+      "tutorial": "https://www.youtube.com/watch?v=GKsIPkXWpyc"
+    },
+    "myResults": {
+      "sourceGithub": "https://github.com/Hamza-Zahir/Amazon-Web3",
+      "websit": "https://profound-moxie-fe409b.netlify.app/"
+    },
+    "done": true
   }
 ]
