--- a/json/allTasks.json
+++ b/json/allTasks.json
@@ -115,5 +115,18 @@
       "websit": "https://profound-moxie-fe409b.netlify.app/"
     },
     "done": true
+  },
+  {
+    "id": 10,
+    "title": "Krypt-Dapp",
+    "OriginalProjects": {
+      "sourceCode": "https://github.com/adrianhajdin/project_web3.0",
+      "tutorial": "https://www.youtube.com/watch?v=Wn_Kb3MR_cU&t=610s"
+    },
+    "myResults": {
+      "sourceGithub": "https://github.com/Hamza-Zahir/Crypto-Dapp",
+      "websit": "https://ephemeral-brigadeiros-3a98d2.netlify.app/"
+    },
+    "done": true
   }
 ]
